# mod_git_lfs

./: .gitignore  10-gitlfs.conf  Makefile.am  README.md  autogen.sh  build.sh  clear.sh  configure.ac  file_c.c  file_c.h  gitlfs.conf  httpd-git.conf  json_c.c  json_c.h  mod_git_lfs.c  protocol.md  t.go  t.sh  test.sh  testgit.sh  testgit_for.sh
test/: Makefile.am  test.gitattributes  test1.gitconfig  test2.gitconfig  test_data.json  test_git_lfs.c
win32/: mod_git_lfs.vcxproj
